# gakushocker

./: .dockerignore  README.md  docker-compose.test.yaml  docker-compose.yml
.github/workflows/: test.yaml
app/: codegen.yml  graphql.schema.json  package.json  schema.graphql
app/src/components/: Cart.tsx  Header.tsx  Menu.tsx  MenuItem.tsx  ProductInfo.tsx
app/src/components/icons/: MinusIcon.tsx  PlusIcon.tsx
app/src/graphql/: getUserInfo.graphql
app/src/models/: ReservedUser.ts
app/src/pages/: index.tsx  payment.tsx
app/src/pages/auth/: signin.tsx
app/src/recoil/: cart.ts  signin.ts  user.ts
docs/: sequence.puml  usecase.puml
script/: 02_create_table.sql
server/: Cargo.toml  Dockerfile  README.md
server/src/: database.rs  error.rs  lib.rs
server/src/controllers/: router.rs  websocket.rs
server/src/controllers/auth/: auth.rs
server/src/controllers/authentication/: auth.rs
server/src/controllers/middleware/: mw_auth.rs
server/src/controllers/presenters/: mutation.rs  query.rs
server/src/entities/: order.rs  product.rs  user.rs
server/src/repositories/: order.rs  product.rs  user.rs
server/src/repository_impl/: order.rs  product.rs  user.rs
server/src/services/: order.rs  product.rs  user.rs
server/src/usecases/: order.rs  product.rs  user.rs
server/tests/: test_graphql_handler.rs  test_middleware.rs
web/: Dockerfile  README.md  graphql.schema.json  package.json  schema.graphql
web/src/components/: Cart.tsx  Header.tsx  MenuItem.tsx  OrderTable.tsx  ProductInfo.tsx
web/src/components/admin/: OrderItem.tsx  ProductInfo.tsx  ProductInfoList.tsx
web/src/graphql/: createOrder.graphql  getUserInfo.graphql  listOrderSpecifiedUser.graphql
web/src/libs/: graphql.ts
web/src/models/: Message.ts  ReservedUser.ts
web/src/pages/: _app.tsx  cart.tsx  dashboard.tsx  index.tsx  payment.tsx  thanks.tsx
web/src/pages/admin/: index.tsx  notify.tsx  orders.tsx
web/src/pages/api/: paypay.ts
web/src/pages/auth/: signin.tsx  (+1 more)
web/src/stories/: Header.stories.tsx  OrderTable.stories.tsx
(+1 files in other folders)
